parser.output
Terminals unused in grammar

   OPEN_CURLY_BRACKET
   CLOSE_CURLY_BRACKET
   OPEN_PARENTHESIS
   CLOSE_PARENTHESIS


State 27 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: PROGRAM_TOKEN IDENTIFIER '{' opt_decls '}' stmt

    2 opt_decls: decls
    3          | %empty

    4 decls: decls SEMI_COLON_TOKEN decls
    5      | dec

    6 dec: VAR_TOKEN IDENTIFIER ':' tipo

    7 tipo: INT_TOKEN
    8     | FLOAT_TOKEN

    9 stmt: assign_stmt
   10     | if_stmt
   11     | iter_stmt
   12     | cmp_stmt

   13 assign_stmt: SET_TOKEN IDENTIFIER expr ';'
   14            | READ_TOKEN IDENTIFIER
   15            | PRINT_TOKEN expr

   16 if_stmt: IF_TOKEN '(' expression ')' stmt
   17        | IFELSE_TOKEN '(' expression ')' stmt stmt

   18 iter_stmt: WHILE_TOKEN '(' expression ')' stmt
   19          | FOR_TOKEN SET_TOKEN IDENTIFIER expr TO_TOKEN expr STEP_TOKEN expr DO_TOKEN stmt

   20 cmp_stmt: '{' '}'
   21         | '{' stmt_lst '}'

   22 stmt_lst: stmt
   23         | stmt_lst stmt

   24 expr: expr ADDITION_TOKEN term
   25     | expr SUBSTRACTION_TOKEN term
   26     | term

   27 term: term MULTIPLICATION_TOKEN factor
   28     | term DIVISION_TOKEN factor
   29     | factor

   30 factor: '(' expr ')'
   31       | IDENTIFIER
   32       | INTEGER
   33       | FLOAT

   34 expression: expr LT_TOKEN expr
   35           | expr GT_TOKEN expr
   36           | expr EQUAL_TOKEN expr
   37           | expr LTE_TOKEN expr
   38           | expr GTE_TOKEN expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 16 17 18 30
')' (41) 16 17 18 30
':' (58) 6
';' (59) 13
'{' (123) 1 20 21
'}' (125) 1 20 21
error (256)
PROGRAM_TOKEN (258) 1
READ_TOKEN (259) 14
PRINT_TOKEN (260) 15
IF_TOKEN (261) 16
IFELSE_TOKEN (262) 17
WHILE_TOKEN (263) 18
FOR_TOKEN (264) 19
TO_TOKEN (265) 19
DO_TOKEN (266) 19
STEP_TOKEN (267) 19
SET_TOKEN (268) 13 19
VAR_TOKEN (269) 6
INT_TOKEN (270) 7
FLOAT_TOKEN (271) 8
ADDITION_TOKEN (272) 24
SUBSTRACTION_TOKEN (273) 25
MULTIPLICATION_TOKEN (274) 27
DIVISION_TOKEN (275) 28
EQUAL_TOKEN (276) 36
LT_TOKEN (277) 34
GT_TOKEN (278) 35
LTE_TOKEN (279) 37
GTE_TOKEN (280) 38
OPEN_CURLY_BRACKET (281)
CLOSE_CURLY_BRACKET (282)
OPEN_PARENTHESIS (283)
CLOSE_PARENTHESIS (284)
SEMI_COLON_TOKEN (285) 4
INTEGER (286) 32
FLOAT (287) 33
IDENTIFIER (288) 1 6 13 14 19 31


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
prog (41)
    on left: 1, on right: 0
opt_decls (42)
    on left: 2 3, on right: 1
decls (43)
    on left: 4 5, on right: 2 4
dec (44)
    on left: 6, on right: 5
tipo (45)
    on left: 7 8, on right: 6
stmt (46)
    on left: 9 10 11 12, on right: 1 16 17 18 19 22 23
assign_stmt (47)
    on left: 13 14 15, on right: 9
if_stmt (48)
    on left: 16 17, on right: 10
iter_stmt (49)
    on left: 18 19, on right: 11
cmp_stmt (50)
    on left: 20 21, on right: 12
stmt_lst (51)
    on left: 22 23, on right: 21 23
expr (52)
    on left: 24 25 26, on right: 13 15 19 24 25 30 34 35 36 37 38
term (53)
    on left: 27 28 29, on right: 24 25 26 27 28
factor (54)
    on left: 30 31 32 33, on right: 27 28 29
expression (55)
    on left: 34 35 36 37 38, on right: 16 17 18


State 0

    0 $accept: . prog $end

    PROGRAM_TOKEN  shift, and go to state 1

    prog  go to state 2


State 1

    1 prog: PROGRAM_TOKEN . IDENTIFIER '{' opt_decls '}' stmt

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: prog . $end

    $end  shift, and go to state 4


State 3

    1 prog: PROGRAM_TOKEN IDENTIFIER . '{' opt_decls '}' stmt

    '{'  shift, and go to state 5


State 4

    0 $accept: prog $end .

    $default  accept


State 5

    1 prog: PROGRAM_TOKEN IDENTIFIER '{' . opt_decls '}' stmt

    VAR_TOKEN  shift, and go to state 6

    $default  reduce using rule 3 (opt_decls)

    opt_decls  go to state 7
    decls      go to state 8
    dec        go to state 9


State 6

    6 dec: VAR_TOKEN . IDENTIFIER ':' tipo

    IDENTIFIER  shift, and go to state 10


State 7

    1 prog: PROGRAM_TOKEN IDENTIFIER '{' opt_decls . '}' stmt

    '}'  shift, and go to state 11


State 8

    2 opt_decls: decls .
    4 decls: decls . SEMI_COLON_TOKEN decls

    SEMI_COLON_TOKEN  shift, and go to state 12

    $default  reduce using rule 2 (opt_decls)


State 9

    5 decls: dec .

    $default  reduce using rule 5 (decls)


State 10

    6 dec: VAR_TOKEN IDENTIFIER . ':' tipo

    ':'  shift, and go to state 13


State 11

    1 prog: PROGRAM_TOKEN IDENTIFIER '{' opt_decls '}' . stmt

    READ_TOKEN    shift, and go to state 14
    PRINT_TOKEN   shift, and go to state 15
    IF_TOKEN      shift, and go to state 16
    IFELSE_TOKEN  shift, and go to state 17
    WHILE_TOKEN   shift, and go to state 18
    FOR_TOKEN     shift, and go to state 19
    SET_TOKEN     shift, and go to state 20
    '{'           shift, and go to state 21

    stmt         go to state 22
    assign_stmt  go to state 23
    if_stmt      go to state 24
    iter_stmt    go to state 25
    cmp_stmt     go to state 26


State 12

    4 decls: decls SEMI_COLON_TOKEN . decls

    VAR_TOKEN  shift, and go to state 6

    decls  go to state 27
    dec    go to state 9


State 13

    6 dec: VAR_TOKEN IDENTIFIER ':' . tipo

    INT_TOKEN    shift, and go to state 28
    FLOAT_TOKEN  shift, and go to state 29

    tipo  go to state 30


State 14

   14 assign_stmt: READ_TOKEN . IDENTIFIER

    IDENTIFIER  shift, and go to state 31


State 15

   15 assign_stmt: PRINT_TOKEN . expr

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr    go to state 36
    term    go to state 37
    factor  go to state 38


State 16

   16 if_stmt: IF_TOKEN . '(' expression ')' stmt

    '('  shift, and go to state 39


State 17

   17 if_stmt: IFELSE_TOKEN . '(' expression ')' stmt stmt

    '('  shift, and go to state 40


State 18

   18 iter_stmt: WHILE_TOKEN . '(' expression ')' stmt

    '('  shift, and go to state 41


State 19

   19 iter_stmt: FOR_TOKEN . SET_TOKEN IDENTIFIER expr TO_TOKEN expr STEP_TOKEN expr DO_TOKEN stmt

    SET_TOKEN  shift, and go to state 42


State 20

   13 assign_stmt: SET_TOKEN . IDENTIFIER expr ';'

    IDENTIFIER  shift, and go to state 43


State 21

   20 cmp_stmt: '{' . '}'
   21         | '{' . stmt_lst '}'

    READ_TOKEN    shift, and go to state 14
    PRINT_TOKEN   shift, and go to state 15
    IF_TOKEN      shift, and go to state 16
    IFELSE_TOKEN  shift, and go to state 17
    WHILE_TOKEN   shift, and go to state 18
    FOR_TOKEN     shift, and go to state 19
    SET_TOKEN     shift, and go to state 20
    '{'           shift, and go to state 21
    '}'           shift, and go to state 44

    stmt         go to state 45
    assign_stmt  go to state 23
    if_stmt      go to state 24
    iter_stmt    go to state 25
    cmp_stmt     go to state 26
    stmt_lst     go to state 46


State 22

    1 prog: PROGRAM_TOKEN IDENTIFIER '{' opt_decls '}' stmt .

    $default  reduce using rule 1 (prog)


State 23

    9 stmt: assign_stmt .

    $default  reduce using rule 9 (stmt)


State 24

   10 stmt: if_stmt .

    $default  reduce using rule 10 (stmt)


State 25

   11 stmt: iter_stmt .

    $default  reduce using rule 11 (stmt)


State 26

   12 stmt: cmp_stmt .

    $default  reduce using rule 12 (stmt)


State 27

    4 decls: decls . SEMI_COLON_TOKEN decls
    4      | decls SEMI_COLON_TOKEN decls .

    SEMI_COLON_TOKEN  shift, and go to state 12

    SEMI_COLON_TOKEN  [reduce using rule 4 (decls)]
    $default          reduce using rule 4 (decls)


State 28

    7 tipo: INT_TOKEN .

    $default  reduce using rule 7 (tipo)


State 29

    8 tipo: FLOAT_TOKEN .

    $default  reduce using rule 8 (tipo)


State 30

    6 dec: VAR_TOKEN IDENTIFIER ':' tipo .

    $default  reduce using rule 6 (dec)


State 31

   14 assign_stmt: READ_TOKEN IDENTIFIER .

    $default  reduce using rule 14 (assign_stmt)


State 32

   32 factor: INTEGER .

    $default  reduce using rule 32 (factor)


State 33

   33 factor: FLOAT .

    $default  reduce using rule 33 (factor)


State 34

   31 factor: IDENTIFIER .

    $default  reduce using rule 31 (factor)


State 35

   30 factor: '(' . expr ')'

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr    go to state 47
    term    go to state 37
    factor  go to state 38


State 36

   15 assign_stmt: PRINT_TOKEN expr .
   24 expr: expr . ADDITION_TOKEN term
   25     | expr . SUBSTRACTION_TOKEN term

    ADDITION_TOKEN      shift, and go to state 48
    SUBSTRACTION_TOKEN  shift, and go to state 49

    $default  reduce using rule 15 (assign_stmt)


State 37

   26 expr: term .
   27 term: term . MULTIPLICATION_TOKEN factor
   28     | term . DIVISION_TOKEN factor

    MULTIPLICATION_TOKEN  shift, and go to state 50
    DIVISION_TOKEN        shift, and go to state 51

    $default  reduce using rule 26 (expr)


State 38

   29 term: factor .

    $default  reduce using rule 29 (term)


State 39

   16 if_stmt: IF_TOKEN '(' . expression ')' stmt

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr        go to state 52
    term        go to state 37
    factor      go to state 38
    expression  go to state 53


State 40

   17 if_stmt: IFELSE_TOKEN '(' . expression ')' stmt stmt

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr        go to state 52
    term        go to state 37
    factor      go to state 38
    expression  go to state 54


State 41

   18 iter_stmt: WHILE_TOKEN '(' . expression ')' stmt

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr        go to state 52
    term        go to state 37
    factor      go to state 38
    expression  go to state 55


State 42

   19 iter_stmt: FOR_TOKEN SET_TOKEN . IDENTIFIER expr TO_TOKEN expr STEP_TOKEN expr DO_TOKEN stmt

    IDENTIFIER  shift, and go to state 56


State 43

   13 assign_stmt: SET_TOKEN IDENTIFIER . expr ';'

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr    go to state 57
    term    go to state 37
    factor  go to state 38


State 44

   20 cmp_stmt: '{' '}' .

    $default  reduce using rule 20 (cmp_stmt)


State 45

   22 stmt_lst: stmt .

    $default  reduce using rule 22 (stmt_lst)


State 46

   21 cmp_stmt: '{' stmt_lst . '}'
   23 stmt_lst: stmt_lst . stmt

    READ_TOKEN    shift, and go to state 14
    PRINT_TOKEN   shift, and go to state 15
    IF_TOKEN      shift, and go to state 16
    IFELSE_TOKEN  shift, and go to state 17
    WHILE_TOKEN   shift, and go to state 18
    FOR_TOKEN     shift, and go to state 19
    SET_TOKEN     shift, and go to state 20
    '{'           shift, and go to state 21
    '}'           shift, and go to state 58

    stmt         go to state 59
    assign_stmt  go to state 23
    if_stmt      go to state 24
    iter_stmt    go to state 25
    cmp_stmt     go to state 26


State 47

   24 expr: expr . ADDITION_TOKEN term
   25     | expr . SUBSTRACTION_TOKEN term
   30 factor: '(' expr . ')'

    ADDITION_TOKEN      shift, and go to state 48
    SUBSTRACTION_TOKEN  shift, and go to state 49
    ')'                 shift, and go to state 60


State 48

   24 expr: expr ADDITION_TOKEN . term

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    term    go to state 61
    factor  go to state 38


State 49

   25 expr: expr SUBSTRACTION_TOKEN . term

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    term    go to state 62
    factor  go to state 38


State 50

   27 term: term MULTIPLICATION_TOKEN . factor

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    factor  go to state 63


State 51

   28 term: term DIVISION_TOKEN . factor

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    factor  go to state 64


State 52

   24 expr: expr . ADDITION_TOKEN term
   25     | expr . SUBSTRACTION_TOKEN term
   34 expression: expr . LT_TOKEN expr
   35           | expr . GT_TOKEN expr
   36           | expr . EQUAL_TOKEN expr
   37           | expr . LTE_TOKEN expr
   38           | expr . GTE_TOKEN expr

    ADDITION_TOKEN      shift, and go to state 48
    SUBSTRACTION_TOKEN  shift, and go to state 49
    EQUAL_TOKEN         shift, and go to state 65
    LT_TOKEN            shift, and go to state 66
    GT_TOKEN            shift, and go to state 67
    LTE_TOKEN           shift, and go to state 68
    GTE_TOKEN           shift, and go to state 69


State 53

   16 if_stmt: IF_TOKEN '(' expression . ')' stmt

    ')'  shift, and go to state 70


State 54

   17 if_stmt: IFELSE_TOKEN '(' expression . ')' stmt stmt

    ')'  shift, and go to state 71


State 55

   18 iter_stmt: WHILE_TOKEN '(' expression . ')' stmt

    ')'  shift, and go to state 72


State 56

   19 iter_stmt: FOR_TOKEN SET_TOKEN IDENTIFIER . expr TO_TOKEN expr STEP_TOKEN expr DO_TOKEN stmt

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr    go to state 73
    term    go to state 37
    factor  go to state 38


State 57

   13 assign_stmt: SET_TOKEN IDENTIFIER expr . ';'
   24 expr: expr . ADDITION_TOKEN term
   25     | expr . SUBSTRACTION_TOKEN term

    ADDITION_TOKEN      shift, and go to state 48
    SUBSTRACTION_TOKEN  shift, and go to state 49
    ';'                 shift, and go to state 74


State 58

   21 cmp_stmt: '{' stmt_lst '}' .

    $default  reduce using rule 21 (cmp_stmt)


State 59

   23 stmt_lst: stmt_lst stmt .

    $default  reduce using rule 23 (stmt_lst)


State 60

   30 factor: '(' expr ')' .

    $default  reduce using rule 30 (factor)


State 61

   24 expr: expr ADDITION_TOKEN term .
   27 term: term . MULTIPLICATION_TOKEN factor
   28     | term . DIVISION_TOKEN factor

    MULTIPLICATION_TOKEN  shift, and go to state 50
    DIVISION_TOKEN        shift, and go to state 51

    $default  reduce using rule 24 (expr)


State 62

   25 expr: expr SUBSTRACTION_TOKEN term .
   27 term: term . MULTIPLICATION_TOKEN factor
   28     | term . DIVISION_TOKEN factor

    MULTIPLICATION_TOKEN  shift, and go to state 50
    DIVISION_TOKEN        shift, and go to state 51

    $default  reduce using rule 25 (expr)


State 63

   27 term: term MULTIPLICATION_TOKEN factor .

    $default  reduce using rule 27 (term)


State 64

   28 term: term DIVISION_TOKEN factor .

    $default  reduce using rule 28 (term)


State 65

   36 expression: expr EQUAL_TOKEN . expr

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr    go to state 75
    term    go to state 37
    factor  go to state 38


State 66

   34 expression: expr LT_TOKEN . expr

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr    go to state 76
    term    go to state 37
    factor  go to state 38


State 67

   35 expression: expr GT_TOKEN . expr

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr    go to state 77
    term    go to state 37
    factor  go to state 38


State 68

   37 expression: expr LTE_TOKEN . expr

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr    go to state 78
    term    go to state 37
    factor  go to state 38


State 69

   38 expression: expr GTE_TOKEN . expr

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr    go to state 79
    term    go to state 37
    factor  go to state 38


State 70

   16 if_stmt: IF_TOKEN '(' expression ')' . stmt

    READ_TOKEN    shift, and go to state 14
    PRINT_TOKEN   shift, and go to state 15
    IF_TOKEN      shift, and go to state 16
    IFELSE_TOKEN  shift, and go to state 17
    WHILE_TOKEN   shift, and go to state 18
    FOR_TOKEN     shift, and go to state 19
    SET_TOKEN     shift, and go to state 20
    '{'           shift, and go to state 21

    stmt         go to state 80
    assign_stmt  go to state 23
    if_stmt      go to state 24
    iter_stmt    go to state 25
    cmp_stmt     go to state 26


State 71

   17 if_stmt: IFELSE_TOKEN '(' expression ')' . stmt stmt

    READ_TOKEN    shift, and go to state 14
    PRINT_TOKEN   shift, and go to state 15
    IF_TOKEN      shift, and go to state 16
    IFELSE_TOKEN  shift, and go to state 17
    WHILE_TOKEN   shift, and go to state 18
    FOR_TOKEN     shift, and go to state 19
    SET_TOKEN     shift, and go to state 20
    '{'           shift, and go to state 21

    stmt         go to state 81
    assign_stmt  go to state 23
    if_stmt      go to state 24
    iter_stmt    go to state 25
    cmp_stmt     go to state 26


State 72

   18 iter_stmt: WHILE_TOKEN '(' expression ')' . stmt

    READ_TOKEN    shift, and go to state 14
    PRINT_TOKEN   shift, and go to state 15
    IF_TOKEN      shift, and go to state 16
    IFELSE_TOKEN  shift, and go to state 17
    WHILE_TOKEN   shift, and go to state 18
    FOR_TOKEN     shift, and go to state 19
    SET_TOKEN     shift, and go to state 20
    '{'           shift, and go to state 21

    stmt         go to state 82
    assign_stmt  go to state 23
    if_stmt      go to state 24
    iter_stmt    go to state 25
    cmp_stmt     go to state 26


State 73

   19 iter_stmt: FOR_TOKEN SET_TOKEN IDENTIFIER expr . TO_TOKEN expr STEP_TOKEN expr DO_TOKEN stmt
   24 expr: expr . ADDITION_TOKEN term
   25     | expr . SUBSTRACTION_TOKEN term

    TO_TOKEN            shift, and go to state 83
    ADDITION_TOKEN      shift, and go to state 48
    SUBSTRACTION_TOKEN  shift, and go to state 49


State 74

   13 assign_stmt: SET_TOKEN IDENTIFIER expr ';' .

    $default  reduce using rule 13 (assign_stmt)


State 75

   24 expr: expr . ADDITION_TOKEN term
   25     | expr . SUBSTRACTION_TOKEN term
   36 expression: expr EQUAL_TOKEN expr .

    ADDITION_TOKEN      shift, and go to state 48
    SUBSTRACTION_TOKEN  shift, and go to state 49

    $default  reduce using rule 36 (expression)


State 76

   24 expr: expr . ADDITION_TOKEN term
   25     | expr . SUBSTRACTION_TOKEN term
   34 expression: expr LT_TOKEN expr .

    ADDITION_TOKEN      shift, and go to state 48
    SUBSTRACTION_TOKEN  shift, and go to state 49

    $default  reduce using rule 34 (expression)


State 77

   24 expr: expr . ADDITION_TOKEN term
   25     | expr . SUBSTRACTION_TOKEN term
   35 expression: expr GT_TOKEN expr .

    ADDITION_TOKEN      shift, and go to state 48
    SUBSTRACTION_TOKEN  shift, and go to state 49

    $default  reduce using rule 35 (expression)


State 78

   24 expr: expr . ADDITION_TOKEN term
   25     | expr . SUBSTRACTION_TOKEN term
   37 expression: expr LTE_TOKEN expr .

    ADDITION_TOKEN      shift, and go to state 48
    SUBSTRACTION_TOKEN  shift, and go to state 49

    $default  reduce using rule 37 (expression)


State 79

   24 expr: expr . ADDITION_TOKEN term
   25     | expr . SUBSTRACTION_TOKEN term
   38 expression: expr GTE_TOKEN expr .

    ADDITION_TOKEN      shift, and go to state 48
    SUBSTRACTION_TOKEN  shift, and go to state 49

    $default  reduce using rule 38 (expression)


State 80

   16 if_stmt: IF_TOKEN '(' expression ')' stmt .

    $default  reduce using rule 16 (if_stmt)


State 81

   17 if_stmt: IFELSE_TOKEN '(' expression ')' stmt . stmt

    READ_TOKEN    shift, and go to state 14
    PRINT_TOKEN   shift, and go to state 15
    IF_TOKEN      shift, and go to state 16
    IFELSE_TOKEN  shift, and go to state 17
    WHILE_TOKEN   shift, and go to state 18
    FOR_TOKEN     shift, and go to state 19
    SET_TOKEN     shift, and go to state 20
    '{'           shift, and go to state 21

    stmt         go to state 84
    assign_stmt  go to state 23
    if_stmt      go to state 24
    iter_stmt    go to state 25
    cmp_stmt     go to state 26


State 82

   18 iter_stmt: WHILE_TOKEN '(' expression ')' stmt .

    $default  reduce using rule 18 (iter_stmt)


State 83

   19 iter_stmt: FOR_TOKEN SET_TOKEN IDENTIFIER expr TO_TOKEN . expr STEP_TOKEN expr DO_TOKEN stmt

    INTEGER     shift, and go to state 32
    FLOAT       shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    expr    go to state 85
    term    go to state 37
    factor  go to state 38


State 84

   17 if_stmt: IFELSE_TOKEN '(' expression ')' stmt stmt .

    $default  reduce using rule 17 (if_stmt)
